<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">


    <EditText
        android:id="@+id/website_editext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_url" />
    <Button
        android:id="@+id/open_website_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openWebsite"
        android:text="@string/button_url"/>

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_loc" />
    <Button
        android:id="@+id/open_location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_loc"
        android:onClick="openLocation"/>
    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_share" />
    <Button
        android:id="@+id/share_text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        android:onClick="shareText"/>

</LinearLayout>